hphp/hack/test/typecheck/ffp/function_abstract_bad.php.exp
File "function_abstract_bad.php", line 4, characters 7-13:
Top-level functions cannot be declared abstract (Parsing[1002])
