hphp/hack/test/typecheck/ffp/function_abstract_bad.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

async abstract function foo(): void {
}
